Add .gitignore and update documentation

--- a/config.json
+++ b/config.json
@@ -2,16 +2,20 @@
     "provider": "cloudflare",
     "get_ip": {
         "interface": "enp6s18",
-        "url": "https://ipv6.icanhazip.com"
+        "urls": [
+            "https://ipv6.icanhazip.com",
+            "https://6.ipw.cn",
+            "https://v6.ipv6-test.com/api/myip.php"
+        ]
     },
     "work_dir": "",
     "provider_options": {
-        "api_token": "enc:ou3ZYtKF0JR9bK1TDY6S9nsCadZ1fEd7Ci3bUijk",
-        "zone_id": "enc:0b7a20a170693acc0ac8b2cfc45d2189",
+        "api_token": "ou3ZYtKF0JR9bK1TDY6S9nsCadZ1fEd7Ci3bUUg5",
+        "zone_id": "0b7a20a170693acc0ac8b2cfc45d2181",
         "proxied": false,
         "ttl": 180,
         "domain": {
-            "zone": "example.com",
+            "zone": "contactofen.site",
             "record": "dev"
         }
     }
